data/derived/fa15/progs/unify/prog2270.ml.out
Characters 106-109:
  if place <= 0 then (place+1, res + (mulByDigit x res))
                                                   ^^^
Error: This expression has type int but an expression was expected of type
         int list
